# politician_embeddings

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  bash.exe.stackdump  dashboard.py  pyproject.toml
.github/workflows/: test_export.yml  tests.yml  train_model.yml  update_data.yml  update_embeddings.yml  update_pipeline.yml  update_protocols.yml  update_protokolle.yml
.streamlit/: config.toml
data/: periods.csv
data/132/: committee_memberships.csv  committees.csv  party_speech_stats.csv  party_word_freq.csv  politicians.csv  polls.csv  sidejobs.csv
data/161/: committee_memberships.csv  committees.csv  politicians.csv  polls.csv  sidejobs.csv  votes.csv
data/20/: drucksachen_antrag.json  drucksachen_grosse_anfrage.json  party_speech_stats.csv  party_word_freq.csv
data/21/: dip_plenary_protocols.csv  drucksachen_antrag.json  drucksachen_grosse_anfrage.json  drucksachen_kleine_anfrage.json  party_speech_stats.csv  party_word_freq.csv  votes.csv
data/21/plenary_protocols/: 006.xml  014.xml  021.xml  030.xml  031.xml  034.xml  037.xml  048.xml  050.xml  053.xml  056.xml  059.xml  065.xml
docs/plans/: 2026-03-26-dip-analyseseiten.md
docs/specs/: 2026-03-26-dip-analysen-design.md
docs/superpowers/plans/: 2026-03-22-politician-search.md  2026-03-29-speeches-page.md
docs/superpowers/specs/: 2026-03-22-politician-search-design.md  2026-03-28-speeches-page-design.md  2026-04-05-keyword-timeline-zoom-design.md
frontend/: eslint.config.mjs  jest.config.ts  package-lock.json  package.json
frontend/__tests__/lib/: constants.test.ts  data.test.ts  language-context.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ausschuesse/: page.tsx
frontend/app/comments/: page.tsx
frontend/app/impressum/: page.tsx
frontend/app/motions/: page.tsx
frontend/app/party-profile/: page.tsx
frontend/app/potential-conflicts/: page.tsx
frontend/app/sidejobs/: page.tsx
frontend/app/speeches/: page.tsx
frontend/app/thementrends/: page.tsx
frontend/hooks/: useContainerWidth.ts  useCountUp.ts
frontend/lib/: chart-utils.tsx  constants.ts  data.ts  fonts.ts  language-context.tsx  nav-items.tsx  page-meta.ts  period-context.tsx  seats.ts  vote-map.ts
frontend/lib/i18n/: de.ts  (+2 more)
outputs/: politician_embeddings_132.csv  politician_embeddings_161.csv  politician_embeddings_161_2d.csv  politician_embeddings_21.csv
pages/: constants.py  home.py  occupation_clusters.py  overview.py  party_profile.py  sidejobs.py  vergleich.py  vote_comparison.py  vote_map.py
src/: cli.py  compute_word_stats.py  export.py  export_json.py  export_profile.py  export_sidejobs.py  export_utils.py  fetch_data.py  fetch_data.py.tmp.19552.1773766429265  fetch_data.py.tmp.19552.1773766435036  fetch_protokoll_xml.py  fetch_protokolle.py  models.py  parse_protokolle.py  paths.py  pipeline.py  storage.py  train_model.py  transforms.py
src/analysis/: comments.py  drucksachen.py  keyword_timeline.py  kommentare.py  word_stats.py
src/fetch/: abgeordnetenwatch.py  drucksachen.py  protocol_xml.py  protocols.py  protokoll_xml.py  protokolle.py
src/model/: model.py  train.py
src/parse/: protocols.py  protokolle.py
src/politician_embeddings/: train_model.py
tests/: test_cli.py  test_compute_word_stats.py  test_drucksachen.py  test_export_json.py  test_fetch_data.py  test_fetch_protocol_xml.py  test_fetch_protocols.py  test_fetch_protokoll_xml.py  test_keyword_timeline.py  test_models.py  test_parse_protocols.py  test_parse_protokolle.py  test_pipeline.py  test_storage.py  test_transforms.py  test_upsert.py
(+88 files in other folders)
