[project]
name = "politician-embeddings"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.13.0"
dependencies = [
    "lightning>=2.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "requests>=2.32.5",
    "streamlit>=1.40.0",
    "torch>=2.10.0",
]

[tool.uv]
# streamlit declares pandas<3 but is compatible with pandas 3 in practice
override-dependencies = ["pandas>=3.0.1"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "COM812", "PLR0913", "N812", "PLC0415", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# inline HTML strings with intentionally long lines and the ℹ unicode symbol
"app.py" = ["E501", "RUF001"]
"pages/*.py" = ["E501", "RUF001", "INP001", "ERA001"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "requests-mock>=1.12.1",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
