[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "parlascanned"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.13.0"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "spacy>=3.8.0",
]

[tool.uv]
default-groups = []

# Always install the CPU-only PyTorch build (no CUDA needed)
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "COM812", "PLR0913", "N812", "PLC0415", "PLR2004", "TID252"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "INP001", "SLF001", "ERA001", "ARG001", "ARG005", "E501", "RUF001"]

[tool.ty.rules]
# torch and lightning are in the optional 'train' group and not installed by
# default, so ty cannot resolve them. Downgrade to a warning to unblock commits.
unresolved-import = "warn"
# type: ignore comments in test_models.py become unused when torch is not installed
unused-ignore-comment = "warn"
unused-type-ignore-comment = "warn"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "requests-mock>=1.12.1",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
train = [
    "lightning>=2.6.1",
    "torch>=2.10.0",
]
